Fix Search Bug (Employee/Shipper)
原先 Employee 及 Shipper 選項必須要選擇,缺少不篩選的選項,此 commit 已修正

--- a/Layer/Views/Order/Index.cshtml
+++ b/Layer/Views/Order/Index.cshtml
@@ -88,9 +88,9 @@
                 </tr>
             </table>
 
-            <span data-dojo-type="dijit/form/Button" id="sendOrderCondition" onclick="orderAction.SearchOrderByCondition()">查詢</span>
+            <span data-dojo-type="dijit/form/Button" id="sendOrderCondition" data-dojo-props="iconClass:'dijitIconSearch'" onclick="orderAction.SearchOrderByCondition()">查詢</span>
 
-            <span data-dojo-type="dijit/form/Button" id="insertOrder" onclick="InsertDialog.show();">新增</span>
+            <span data-dojo-type="dijit/form/Button" id="insertOrder" data-dojo-props="iconClass:'dijitIconNewTask'" onclick="InsertDialog.show();">新增</span>
 
         </form>
 
