--- a/Layer/Views/Order/GetInsertDialog.cshtml
+++ b/Layer/Views/Order/GetInsertDialog.cshtml
@@ -4,7 +4,7 @@
     <table>
         <tr>
             <th>
-                @Html.LabelFor(model => model.CustName, htmlAttributes: new { @class = "control-label col-md-2" })
+                (*)@Html.LabelFor(model => model.CustName, htmlAttributes: new { @class = "control-label col-md-2" })
             </th>
             <th>
                 @Html.DropDownListFor(model => model.CustName, (List<SelectListItem>)ViewBag.CustNameData)
@@ -12,7 +12,7 @@
         </tr>
         <tr>
             <th>
-                @Html.LabelFor(model => model.EmpName, htmlAttributes: new { @class = "control-label col-md-2" })
+                (*)@Html.LabelFor(model => model.EmpName, htmlAttributes: new { @class = "control-label col-md-2" })
             </th>
             <th>
                 @Html.DropDownListFor(model => model.EmpName, (List<SelectListItem>)ViewBag.EmpNameData)
@@ -20,14 +20,14 @@
         </tr>
         <tr>
             <th>
-                @Html.LabelFor(model => model.Orderdate, htmlAttributes: new { @class = "control-label col-md-2" })
+                (*)@Html.LabelFor(model => model.Orderdate, htmlAttributes: new { @class = "control-label col-md-2" })
             </th>
             <th>
                 @Html.TextBoxFor(model => model.Orderdate, new { @type = "date" })
                 @Html.ValidationMessageFor(model => model.Orderdate, "", new { @class = "text-danger" })
             </th>
             <th>
-                @Html.LabelFor(model => model.RequiredDate, htmlAttributes: new { @class = "control-label col-md-2" })
+                (*)@Html.LabelFor(model => model.RequiredDate, htmlAttributes: new { @class = "control-label col-md-2" })
             </th>
             <th>
                 @Html.TextBoxFor(model => model.RequiredDate, new { @type = "date", @value = "{0:yyyy-MM-dd}" })
@@ -36,7 +36,7 @@
         </tr>
         <tr>
             <th>
-                @Html.LabelFor(model => model.ShippedDate, htmlAttributes: new { @class = "control-label col-md-2" })
+                (*)@Html.LabelFor(model => model.ShippedDate, htmlAttributes: new { @class = "control-label col-md-2" })
             </th>
             <th>
                 @Html.TextBoxFor(model => model.ShippedDate, new { @type = "date" })
@@ -45,7 +45,7 @@
         </tr>
         <tr>
             <th>
-                @Html.LabelFor(model => model.ShipperName, htmlAttributes: new { @class = "control-label col-md-2" })
+                (*)@Html.LabelFor(model => model.ShipperName, htmlAttributes: new { @class = "control-label col-md-2" })
             </th>
             <th>
                 @Html.DropDownListFor(model => model.ShipperName, (List<SelectListItem>)ViewBag.ShipperNameData)
@@ -53,23 +53,23 @@
         </tr>
         <tr>
             <th>
-                @Html.LabelFor(model => model.Freight, htmlAttributes: new { @class = "control-label col-md-2" })
+                (*)@Html.LabelFor(model => model.Freight, htmlAttributes: new { @class = "control-label col-md-2" })
             </th>
             <th>
-                @Html.EditorFor(model => model.Freight, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Freight, new { htmlAttributes = new { @name = "", @class = "form-control", @min = 0, @step = 1, @value = 0 } })
                 @Html.ValidationMessageFor(model => model.Freight, "", new { @class = "text-danger" })
             </th>
         </tr>
         <tr>
             <th>
-                @Html.LabelFor(model => model.ShipCountry, htmlAttributes: new { @class = "control-label col-md-2" })
+                (*)@Html.LabelFor(model => model.ShipCountry, htmlAttributes: new { @class = "control-label col-md-2" })
             </th>
             <th>
                 @Html.EditorFor(model => model.ShipCountry, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ShipCountry, "", new { @class = "text-danger" })
             </th>
             <th>
-                @Html.LabelFor(model => model.ShipCity, htmlAttributes: new { @class = "control-label col-md-2" })
+                (*)@Html.LabelFor(model => model.ShipCity, htmlAttributes: new { @class = "control-label col-md-2" })
             </th>
             <th>
                 @Html.EditorFor(model => model.ShipCity, new { htmlAttributes = new { @class = "form-control" } })
@@ -78,14 +78,14 @@
         </tr>
         <tr>
             <th>
-                @Html.LabelFor(model => model.ShipRegion, htmlAttributes: new { @class = "control-label col-md-2" })
+                (*)@Html.LabelFor(model => model.ShipRegion, htmlAttributes: new { @class = "control-label col-md-2" })
             </th>
             <th>
                 @Html.EditorFor(model => model.ShipRegion, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ShipRegion, "", new { @class = "text-danger" })
             </th>
             <th>
-                @Html.LabelFor(model => model.ShipPostalCode, htmlAttributes: new { @class = "control-label col-md-2" })
+                (*)@Html.LabelFor(model => model.ShipPostalCode, htmlAttributes: new { @class = "control-label col-md-2" })
             </th>
             <th>
                 @Html.EditorFor(model => model.ShipPostalCode, new { htmlAttributes = new { @class = "form-control" } })
@@ -94,18 +94,18 @@
         </tr>
         <tr>
             <th>
-                @Html.LabelFor(model => model.ShipAddress, htmlAttributes: new { @class = "control-label col-md-2" })
+                (*)@Html.LabelFor(model => model.ShipAddress, htmlAttributes: new { @class = "control-label col-md-2" })
             </th>
             <th>
                 @Html.EditorFor(model => model.ShipAddress, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ShipAddress, "", new { @class = "text-danger" })
             </th>
             <th>
-                @Html.LabelFor(model => model.ShipAddress, htmlAttributes: new { @class = "control-label col-md-2" })
+                (*)@Html.LabelFor(model => model.ShipName, htmlAttributes: new { @class = "control-label col-md-2" })
             </th>
             <th>
-                @Html.EditorFor(model => model.ShipAddress, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ShipAddress, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.ShipName, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.ShipName, "", new { @class = "text-danger" })
             </th>
         </tr>
 
