--- a/Layer/Views/Shared/_Layout.cshtml
+++ b/Layer/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
-            @*<div class="navbar-header">
+            <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -22,12 +22,12 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("首頁", "Index", "Home")</li>
-                    <li>@Html.ActionLink("關於", "About", "Home")</li>
-                    <li>@Html.ActionLink("連絡方式", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("首頁", "/Index", "Home")</li>
+                    <li>@Html.ActionLink("訂單實作 Dojo", "/Index", "Order")</li>
+                    <li>@Html.ActionLink("訂單實作 Kendo UI", "Index", "Order2")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
-            </div>*@
+            </div>
         </div>
     </div>
     <div class="container body-content">
@@ -38,7 +38,6 @@
         </footer>
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
 </body>
