--- a/Layer/Views/Order2/Index.cshtml
+++ b/Layer/Views/Order2/Index.cshtml
@@ -90,9 +90,120 @@
 
         </form>
         <button id="searchButton" class="k-primary" >查詢</button>
-
+        <button id="showInertButton" class="k-primary">新增</button>
 
         <div id="grid"></div>
+    </div>
+    <div id="insertDialog"  style="overflow:auto">
+        <div class="demo-section k-content">
+            <form id="insertForm" data-role="validator" novalidate="novalidate">
+                <table>
+                    <tr>
+                        <td>
+                            <label>客戶名稱</label>
+                        </td>
+                        <td>
+                            <input id="EmpName" name="EmpName"  class="customers" />
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <label>負責員工名稱</label>
+                        </td>
+                        <td>
+                            <input id="CustName" name="CustName" class="employees" />
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <label for="OrderDate">訂單日期</label>
+                        </td>
+                        <td>
+                            <input type="text" data-role='datepicker' id="OrderDate" name="OrderDate" data-type="date" required="required" />
+                            <span data-for='OrderDate' class='k-invalid-msg'></span>
+                        </td>
+                        <td>
+                            <label for="RequiredDate">需要日期</label>
+                        </td>
+                        <td>
+                            <input type="text" data-role='datepicker' id="RetireDate" data-type="date" name="RequiredDate" data-greaterdate-field="OrderDate" data-greaterdate-msg='Required Date should be after Order date ' />
+                            <span data-for='RequiredDate' class='k-invalid-msg'></span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <label for="ShippedDate">出貨日期</label>
+                        </td>
+                        <td>
+                            <input type="text" data-role='datepicker' id="ShippedDate" data-type="date" name="ShippedDate" data-greaterdate-field="OrderDate" data-greaterdate-msg='Shipped Date should be after Hire date' />
+                            <span data-for='ShippedDate' class='k-invalid-msg'></span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <label>出貨公司名稱</label>
+                        </td>
+                        <td>
+                            <input id="ShipperName" name="ShipperName" class="shippers" />
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <label for="Freight">運費</label>
+                        </td>
+                        <td>
+                            <input id="Freight" type="number" title="Freight" value="0" min="0" max="100" />
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <label for="ShipCountry">出貨國家</label>
+                        </td>
+                        <td>
+                            <input type="text" class="k-textbox" name="ShipCountry" id="ShipCountry" />
+                        </td>
+                        <td>
+                            <label for="ShipCity">出貨城市</label>
+                        </td>
+                        <td>
+                            <input type="text" class="k-textbox" name="ShipCity" id="ShipCity" />
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <label for="ShipRegion">出貨地區</label>
+                        </td>
+                        <td>
+                            <input type="text" class="k-textbox" name="ShipRegion" id="ShipRegion" />
+                        </td>
+                        <td>
+                            <label for="ShipPostalCode">郵遞區號</label>
+                        </td>
+                        <td>
+                            <input type="text" class="k-textbox" name="ShipPostalCode" id="ShipPostalCode" />
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <label for="ShipAddress">出貨地址</label>
+                        </td>
+                        <td>
+                            <input type="text" class="k-textbox" name="ShipAddress" id="ShipAddress" />
+                        </td>
+                        <td>
+                            <label for="ShipName">出貨說明</label>
+                        </td>
+                        <td>
+                            <input type="text" class="k-textbox" name="ShipName" id="ShipName" />
+                        </td>
+                    </tr>
+                </table>
+            </form>
+            <button id="insert" class="k-primary" data-role="button">新增</button>
+            <div id='insertList'></div>
+        </div>  
+
+
     </div>
     <div id="updateDialog"></div>
 </body>
